// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollPaddingInlineStart renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-start: 0;
  -moz-scroll-padding-inline-start: 0;
  -ms-scroll-padding-inline-start: 0;
  scroll-padding-inline-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: 0;
  -moz-scroll-padding-inline-start: 0;
  -ms-scroll-padding-inline-start: 0;
  scroll-padding-inline-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: 0;
  -moz-scroll-padding-inline-start: 0;
  -ms-scroll-padding-inline-start: 0;
  scroll-padding-inline-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: 0;
  -moz-scroll-padding-inline-start: 0;
  -ms-scroll-padding-inline-start: 0;
  scroll-padding-inline-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineStart renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-start: hasnot;
  -moz-scroll-padding-inline-start: hasnot;
  -ms-scroll-padding-inline-start: hasnot;
  scroll-padding-inline-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: has;
  -moz-scroll-padding-inline-start: has;
  -ms-scroll-padding-inline-start: has;
  scroll-padding-inline-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: hasnot;
  -moz-scroll-padding-inline-start: hasnot;
  -ms-scroll-padding-inline-start: hasnot;
  scroll-padding-inline-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: has;
  -moz-scroll-padding-inline-start: has;
  -ms-scroll-padding-inline-start: has;
  scroll-padding-inline-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineStart renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-start: invalid.path.1;
  -moz-scroll-padding-inline-start: invalid.path.1;
  -ms-scroll-padding-inline-start: invalid.path.1;
  scroll-padding-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: invalid.path.1;
  -moz-scroll-padding-inline-start: invalid.path.1;
  -ms-scroll-padding-inline-start: invalid.path.1;
  scroll-padding-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: invalid.path.1;
  -moz-scroll-padding-inline-start: invalid.path.1;
  -ms-scroll-padding-inline-start: invalid.path.1;
  scroll-padding-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: invalid.path.1;
  -moz-scroll-padding-inline-start: invalid.path.1;
  -ms-scroll-padding-inline-start: invalid.path.1;
  scroll-padding-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineStart renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-start: -54881px;
  -moz-scroll-padding-inline-start: -54881px;
  -ms-scroll-padding-inline-start: -54881px;
  scroll-padding-inline-start: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: -54881px;
  -moz-scroll-padding-inline-start: -54881px;
  -ms-scroll-padding-inline-start: -54881px;
  scroll-padding-inline-start: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: -42365px;
  -moz-scroll-padding-inline-start: -42365px;
  -ms-scroll-padding-inline-start: -42365px;
  scroll-padding-inline-start: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: -42365px;
  -moz-scroll-padding-inline-start: -42365px;
  -ms-scroll-padding-inline-start: -42365px;
  scroll-padding-inline-start: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineStart renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-start: July;
  -moz-scroll-padding-inline-start: July;
  -ms-scroll-padding-inline-start: July;
  scroll-padding-inline-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: September;
    -moz-scroll-padding-inline-start: September;
    -ms-scroll-padding-inline-start: September;
    scroll-padding-inline-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: July;
  -moz-scroll-padding-inline-start: July;
  -ms-scroll-padding-inline-start: July;
  scroll-padding-inline-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: September;
    -moz-scroll-padding-inline-start: September;
    -ms-scroll-padding-inline-start: September;
    scroll-padding-inline-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: January;
  -moz-scroll-padding-inline-start: January;
  -ms-scroll-padding-inline-start: January;
  scroll-padding-inline-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: December;
    -moz-scroll-padding-inline-start: December;
    -ms-scroll-padding-inline-start: December;
    scroll-padding-inline-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: April;
    -moz-scroll-padding-inline-start: April;
    -ms-scroll-padding-inline-start: April;
    scroll-padding-inline-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: May;
    -moz-scroll-padding-inline-start: May;
    -ms-scroll-padding-inline-start: May;
    scroll-padding-inline-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-start: June;
    -moz-scroll-padding-inline-start: June;
    -ms-scroll-padding-inline-start: June;
    scroll-padding-inline-start: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: January;
  -moz-scroll-padding-inline-start: January;
  -ms-scroll-padding-inline-start: January;
  scroll-padding-inline-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: December;
    -moz-scroll-padding-inline-start: December;
    -ms-scroll-padding-inline-start: December;
    scroll-padding-inline-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: April;
    -moz-scroll-padding-inline-start: April;
    -ms-scroll-padding-inline-start: April;
    scroll-padding-inline-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: May;
    -moz-scroll-padding-inline-start: May;
    -ms-scroll-padding-inline-start: May;
    scroll-padding-inline-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-start: June;
    -moz-scroll-padding-inline-start: June;
    -ms-scroll-padding-inline-start: June;
    scroll-padding-inline-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: July;
    -moz-scroll-padding-inline-start: July;
    -ms-scroll-padding-inline-start: July;
    scroll-padding-inline-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: September;
    -moz-scroll-padding-inline-start: September;
    -ms-scroll-padding-inline-start: September;
    scroll-padding-inline-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: July;
    -moz-scroll-padding-inline-start: July;
    -ms-scroll-padding-inline-start: July;
    scroll-padding-inline-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: September;
    -moz-scroll-padding-inline-start: September;
    -ms-scroll-padding-inline-start: September;
    scroll-padding-inline-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: May;
    -moz-scroll-padding-inline-start: May;
    -ms-scroll-padding-inline-start: May;
    scroll-padding-inline-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: June;
    -moz-scroll-padding-inline-start: June;
    -ms-scroll-padding-inline-start: June;
    scroll-padding-inline-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: April;
    -moz-scroll-padding-inline-start: April;
    -ms-scroll-padding-inline-start: April;
    scroll-padding-inline-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: May;
    -moz-scroll-padding-inline-start: May;
    -ms-scroll-padding-inline-start: May;
    scroll-padding-inline-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: June;
    -moz-scroll-padding-inline-start: June;
    -ms-scroll-padding-inline-start: June;
    scroll-padding-inline-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-start: April;
    -moz-scroll-padding-inline-start: April;
    -ms-scroll-padding-inline-start: April;
    scroll-padding-inline-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineStart renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-start: July;
  -moz-scroll-padding-inline-start: July;
  -ms-scroll-padding-inline-start: July;
  scroll-padding-inline-start: July;
}

@media May {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: September;
    -moz-scroll-padding-inline-start: September;
    -ms-scroll-padding-inline-start: September;
    scroll-padding-inline-start: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: July;
  -moz-scroll-padding-inline-start: July;
  -ms-scroll-padding-inline-start: July;
  scroll-padding-inline-start: July;
}

@media May {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: September;
    -moz-scroll-padding-inline-start: September;
    -ms-scroll-padding-inline-start: September;
    scroll-padding-inline-start: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: April;
  -moz-scroll-padding-inline-start: April;
  -ms-scroll-padding-inline-start: April;
  scroll-padding-inline-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: January;
    -moz-scroll-padding-inline-start: January;
    -ms-scroll-padding-inline-start: January;
    scroll-padding-inline-start: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-start: December;
    -moz-scroll-padding-inline-start: December;
    -ms-scroll-padding-inline-start: December;
    scroll-padding-inline-start: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: April;
    -moz-scroll-padding-inline-start: April;
    -ms-scroll-padding-inline-start: April;
    scroll-padding-inline-start: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-start: May;
    -moz-scroll-padding-inline-start: May;
    -ms-scroll-padding-inline-start: May;
    scroll-padding-inline-start: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: April;
  -moz-scroll-padding-inline-start: April;
  -ms-scroll-padding-inline-start: April;
  scroll-padding-inline-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: January;
    -moz-scroll-padding-inline-start: January;
    -ms-scroll-padding-inline-start: January;
    scroll-padding-inline-start: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-start: December;
    -moz-scroll-padding-inline-start: December;
    -ms-scroll-padding-inline-start: December;
    scroll-padding-inline-start: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: April;
    -moz-scroll-padding-inline-start: April;
    -ms-scroll-padding-inline-start: April;
    scroll-padding-inline-start: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-start: May;
    -moz-scroll-padding-inline-start: May;
    -ms-scroll-padding-inline-start: May;
    scroll-padding-inline-start: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineStart renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-padding-inline-start: July;
    -moz-scroll-padding-inline-start: July;
    -ms-scroll-padding-inline-start: July;
    scroll-padding-inline-start: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-start: September;
    -moz-scroll-padding-inline-start: September;
    -ms-scroll-padding-inline-start: September;
    scroll-padding-inline-start: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-padding-inline-start: July;
    -moz-scroll-padding-inline-start: July;
    -ms-scroll-padding-inline-start: July;
    scroll-padding-inline-start: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-start: September;
    -moz-scroll-padding-inline-start: September;
    -ms-scroll-padding-inline-start: September;
    scroll-padding-inline-start: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: November;
    -moz-scroll-padding-inline-start: November;
    -ms-scroll-padding-inline-start: November;
    scroll-padding-inline-start: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-start: August;
    -moz-scroll-padding-inline-start: August;
    -ms-scroll-padding-inline-start: August;
    scroll-padding-inline-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-inline-start: January;
    -moz-scroll-padding-inline-start: January;
    -ms-scroll-padding-inline-start: January;
    scroll-padding-inline-start: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: December;
    -moz-scroll-padding-inline-start: December;
    -ms-scroll-padding-inline-start: December;
    scroll-padding-inline-start: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-start: April;
    -moz-scroll-padding-inline-start: April;
    -ms-scroll-padding-inline-start: April;
    scroll-padding-inline-start: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: May;
    -moz-scroll-padding-inline-start: May;
    -ms-scroll-padding-inline-start: May;
    scroll-padding-inline-start: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-start: June;
    -moz-scroll-padding-inline-start: June;
    -ms-scroll-padding-inline-start: June;
    scroll-padding-inline-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-inline-start: January;
    -moz-scroll-padding-inline-start: January;
    -ms-scroll-padding-inline-start: January;
    scroll-padding-inline-start: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: December;
    -moz-scroll-padding-inline-start: December;
    -ms-scroll-padding-inline-start: December;
    scroll-padding-inline-start: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-start: April;
    -moz-scroll-padding-inline-start: April;
    -ms-scroll-padding-inline-start: April;
    scroll-padding-inline-start: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-start: May;
    -moz-scroll-padding-inline-start: May;
    -ms-scroll-padding-inline-start: May;
    scroll-padding-inline-start: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-start: June;
    -moz-scroll-padding-inline-start: June;
    -ms-scroll-padding-inline-start: June;
    scroll-padding-inline-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineStart renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-start: 54881px;
  -moz-scroll-padding-inline-start: 54881px;
  -ms-scroll-padding-inline-start: 54881px;
  scroll-padding-inline-start: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: 54881px;
  -moz-scroll-padding-inline-start: 54881px;
  -ms-scroll-padding-inline-start: 54881px;
  scroll-padding-inline-start: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: 42365px;
  -moz-scroll-padding-inline-start: 42365px;
  -ms-scroll-padding-inline-start: 42365px;
  scroll-padding-inline-start: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: 42365px;
  -moz-scroll-padding-inline-start: 42365px;
  -ms-scroll-padding-inline-start: 42365px;
  scroll-padding-inline-start: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineStart renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-start: July;
  -moz-scroll-padding-inline-start: July;
  -ms-scroll-padding-inline-start: July;
  scroll-padding-inline-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: July;
  -moz-scroll-padding-inline-start: July;
  -ms-scroll-padding-inline-start: July;
  scroll-padding-inline-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: June;
  -moz-scroll-padding-inline-start: June;
  -ms-scroll-padding-inline-start: June;
  scroll-padding-inline-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: June;
  -moz-scroll-padding-inline-start: June;
  -ms-scroll-padding-inline-start: June;
  scroll-padding-inline-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineStart renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`scrollPaddingInlineStart renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-start: DarkSlateBlue;
  -moz-scroll-padding-inline-start: DarkSlateBlue;
  -ms-scroll-padding-inline-start: DarkSlateBlue;
  scroll-padding-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: DarkSlateBlue;
  -moz-scroll-padding-inline-start: DarkSlateBlue;
  -ms-scroll-padding-inline-start: DarkSlateBlue;
  scroll-padding-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: DarkSlateBlue;
  -moz-scroll-padding-inline-start: DarkSlateBlue;
  -ms-scroll-padding-inline-start: DarkSlateBlue;
  scroll-padding-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-start: DarkSlateBlue;
  -moz-scroll-padding-inline-start: DarkSlateBlue;
  -ms-scroll-padding-inline-start: DarkSlateBlue;
  scroll-padding-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
